# delirium

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros/src/: display_upper_snake.rs  json_parameters.rs  lib.rs  response_enum.rs  validation.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/api/: jwt_bearer.rs  mod.rs  trace_error.rs  validation_error.rs
server/src/api/controllers/: account.rs  character.rs  deaths.rs  highscores.rs  mod.rs  online.rs  validation.rs
server/src/services/: jwt.rs
src/: config.rs  main.rs  routes.rs  services.rs
src/routes/: account.rs  character.rs  highscores.rs  player.rs
src/services/: jwt.rs
src/utils/: time.rs
