[package]
name = "delirium-server"
version = "0.1.0"
edition = "2021"

[dependencies]
delirium-macros = { path = "../macros"}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.72"
thiserror = "1.0.44"
async-trait = "0.1.72"
dotenv = "0.15.0"
lazy_static = "1.4.0"
figment = { version = "0.10.10", features = ["toml", "env"] }
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
poem = { version = "1.3.57", features = ["anyhow", "chrono"] }
poem-openapi = { version = "3.0.1", features = ["swagger-ui", "chrono"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "mysql", "chrono"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.2.0"
jsonwebtoken = "8.3.0"
int-enum = "0.5.0"
regex = "1.9.3"
rand = "0.8.5"
trim-in-place = "0.1.7"


